syntax = "proto3"; // This should be the first line always.

option java_multiple_files = true;
// java_package (file option): The package you want to use for your generated Java classes.
// If no explicit java_package option is given in the .proto file, then by default the proto package
// (specified using the "package" keyword in the .proto file) will be used. However, proto packages generally
// do not make good Java packages since proto packages are not expected to start with reverse domain names.
// If not generating Java code, this option has no effect.
option java_package = "org.apache.geode.protobuf.generated";
option optimize_for = SPEED;

service RegionService {
    // Perform the put operation
    rpc put (PutRequest) returns (PutReply) {
    }
    // Perform the get operation
    rpc get (GetRequest) returns (GetReply) {
    }
}

message PutRequest {
    string regionName = 1;
    bytes key = 2;
    bytes value = 3;
}

message PutReply {
    bool isSuccess = 1;
}

message GetRequest {
    string regionName = 1;
    bytes key = 2;
}
message GetReply {
    bool isSuccess = 1;
    bytes value = 2;
}
